--- a/table/table.html
+++ b/table/table.html
@@ -6,16 +6,116 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table{
+            width: 1000px;
+            border-spacing: 0;
+        }
+        .blue-row{
+            background-color: rgb(119, 175, 192);
+        }
+        tr:nth-child(odd){
+            background-color: #c4c4c4;
+        }
+        th {
+            background-color: blue;
+        }
+        td,th,tr{
+            border: .5px solid gray;
+            text-align: center;
+        }
+        
+    </style>
 </head>
 
 <body>
     <table class="table">
         <tr class="blue-row">
             <td>&nbsp;</td>
-            <th>Header 2</th>
+            <th>Header 1</th>
+            <th class="as">Header 2</th>
             <th>Header 3</th>
             <th>Header 4</th>
             <th>Header 5</th>
+        </tr>
+        <tr>
+            <th class="blue-row">Line 1</th>
+            <td>23</td>
+            <td>123</td>
+            <td>43</td>
+            <td>12</td>
+            <td>76</td>
+        </tr>
+        <tr>
+            <th class="blue-row">Line 2</th>
+            <td>23</td>
+            <td>123</td>
+            <td>43</td>
+            <td>12</td>
+            <td>76</td>
+        </tr>
+        <tr>
+            <th class="blue-row">Line 2</th>
+            <td>34</td>
+            <td>63</td>
+            <td>25</td>
+            <td>7</td>
+            <td>23</td>
+        </tr>
+        <tr>
+            <th class="blue-row">Line 3</th>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+        </tr>
+        <tr><th class="blue-row">Line 4</th>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+        </tr>
+        <tr>
+            <th class="blue-row">Line 5</th>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+        </tr>
+        <tr>
+            <th class="blue-row">Line 6</th>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+        </tr>
+        <tr>
+            <th class="blue-row">Line 1</th>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+        </tr>
+        <tr>
+            <th class="blue-row">Line 7</th>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+        </tr>
+        <tr>
+            <th class="blue-row">Line 8</th>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
         </tr>
     </table>
 </body>
