--- a/table/table.html
+++ b/table/table.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Таблица</title>
     <style>
         table{
             width: 1000px;
             border-spacing: 0;
-        }
-        .blue-row{
-            background-color: rgb(119, 175, 192);
-        }
+            margin: 100px auto;
+            }
+            .row {
+                position: sticky;
+                top: 0;
+            }
+            .column{
+                position: sticky;
+                left: 0;
+            }
+        
         tr:nth-child(odd){
             background-color: #c4c4c4;
         }
         th {
-            background-color: blue;
+            background-color: rgb(119, 175, 192);
+            
         }
         td,th,tr{
             border: .5px solid gray;
@@ -30,16 +38,16 @@
 
 <body>
     <table class="table">
-        <tr class="blue-row">
-            <td>&nbsp;</td>
-            <th>Header 1</th>
-            <th class="as">Header 2</th>
-            <th>Header 3</th>
-            <th>Header 4</th>
-            <th>Header 5</th>
+        <tr>
+            <th>&nbsp;</th>
+            <th class="row">Header 1</th>
+            <th class="row">Header 2</th>
+            <th class="row">Header 3</th>
+            <th class="row">Header 4</th>
+            <th class="row">Header 5</th>
         </tr>
         <tr>
-            <th class="blue-row">Line 1</th>
+            <th class="column">Line 1</th>
             <td>23</td>
             <td>123</td>
             <td>43</td>
@@ -47,7 +55,7 @@
             <td>76</td>
         </tr>
         <tr>
-            <th class="blue-row">Line 2</th>
+            <th class="column">Line 2</th>
             <td>23</td>
             <td>123</td>
             <td>43</td>
@@ -55,7 +63,7 @@
             <td>76</td>
         </tr>
         <tr>
-            <th class="blue-row">Line 2</th>
+            <th class="column">Line 2</th>
             <td>34</td>
             <td>63</td>
             <td>25</td>
@@ -63,22 +71,14 @@
             <td>23</td>
         </tr>
         <tr>
-            <th class="blue-row">Line 3</th>
+            <th class="column">Line 3</th>
             <td>23</td>
             <td>23</td>
             <td>23</td>
             <td>23</td>
             <td>23</td>
         </tr>
-        <tr><th class="blue-row">Line 4</th>
-            <td>23</td>
-            <td>23</td>
-            <td>23</td>
-            <td>23</td>
-            <td>23</td>
-        </tr>
-        <tr>
-            <th class="blue-row">Line 5</th>
+        <tr><th class="column">Line 4</th>
             <td>23</td>
             <td>23</td>
             <td>23</td>
@@ -86,7 +86,7 @@
             <td>23</td>
         </tr>
         <tr>
-            <th class="blue-row">Line 6</th>
+            <th class="column">Line 5</th>
             <td>23</td>
             <td>23</td>
             <td>23</td>
@@ -94,7 +94,7 @@
             <td>23</td>
         </tr>
         <tr>
-            <th class="blue-row">Line 1</th>
+            <th class="column">Line 6</th>
             <td>23</td>
             <td>23</td>
             <td>23</td>
@@ -102,7 +102,7 @@
             <td>23</td>
         </tr>
         <tr>
-            <th class="blue-row">Line 7</th>
+            <th class="column">Line 1</th>
             <td>23</td>
             <td>23</td>
             <td>23</td>
@@ -110,13 +110,69 @@
             <td>23</td>
         </tr>
         <tr>
-            <th class="blue-row">Line 8</th>
+            <th class="column">Line 7</th>
             <td>23</td>
             <td>23</td>
             <td>23</td>
             <td>23</td>
             <td>23</td>
         </tr>
+        <tr>
+            <th class="column">Line 8</th>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+            <td>23</td>
+        </tr>
+        <tr>
+            <th class="column">Line 9</th>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+            </tr>
+            <tr>
+                <th class="column">Line 10</th>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+            </tr>
+            <tr>
+                <th class="column">Line 11</th>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+            </tr>
+            <tr>
+                <th class="column">Line 12</th>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+            </tr>
+            <tr>
+                <th class="column">Line 13</th>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+            </tr>
+            <tr>
+                <th class="column">Line 14</th>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+                <td>23</td>
+            </tr>
     </table>
 </body>
 
