--- a/menu/index.html
+++ b/menu/index.html
@@ -23,7 +23,7 @@
                 <li class="settings">SETTINGS</li>
             </ul>
         </div>
-        <div class="table-text">
+        <!-- <div class="table-text">
             <h2 class="title">What IS LOREM IPSUM?</h2>
             <span class="text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Эта
                 заголовок деревни коварных все, дорогу своего большого сих всемогущая обеспечивает даже, щеке собрал над
@@ -64,7 +64,7 @@
                 рукопись которой необходимыми всемогущая которое свою, курсивных, ведущими рот? Имеет большой буквоград
                 о, запятой коварный снова за жаренные языкового свой своих лучше рыбными грустный!</span>
         </div>
-    </div>
+    </div> -->
     <a class="link" href="../table/">
         <div class="link-text">Перейти к заданию 1</div>
     </a>
