--- a/menu/index.html
+++ b/menu/index.html
@@ -16,11 +16,24 @@
                 <li class="edit">
                     <img class="icon" src="../Icons/pencil.svg" alt="edit icon">
                     <div class="text-menu">EDIT</div>
-                    </li>
-                <li class="favorite">FAVORITE</li>
-                <li class="histiry">HISTORY</li>
-                <li class="security">SECURITY</li>
-                <li class="settings">SETTINGS</li>
+                </li>
+                <li class="edit">
+                    <img class="icon" src="../Icons/hearts.svg" alt="edit icon">
+                    <div class="text-menu">FAVORITE</div>
+                </li>
+                <li class="edit">
+                    <img class="icon" src="../Icons/history.svg" alt="edit icon">
+                    <div class="text-menu">HISTORY</div>
+                </li>
+                <li class="edit">
+                    <img class="icon" src="../Icons/secure-shield.svg" alt="edit icon">
+                    <div class="text-menu">SECURITY</div>
+                </li>
+                <li class="edit">
+                    <img class="icon" src="../Icons/settings.svg" alt="edit icon">
+                    <div class="text-menu">SETTINGS</div>
+                </li>
+
             </ul>
         </div>
         <div class="table-text">
@@ -36,10 +49,11 @@
                 рукопись которой необходимыми всемогущая которое свою, курсивных, ведущими рот? Имеет большой буквоград
                 <br>
                 <br>
-                о, запятой коварный снова за жаренные языкового свой своих лучше рыбными грустный!Далеко-далеко за словесными горами, в стране гласных и согласных живут рыбные тексты.
+                о, запятой коварный снова за жаренные языкового свой своих лучше рыбными грустный!Далеко-далеко за
+                словесными горами, в стране гласных и согласных живут рыбные тексты.
                 Собрал ты скатился имеет запятой жаренные! Своего снова осталось встретил деревни обеспечивает его прямо
                 маленькая одна переписали несколько маленький заголовок до агентство коварный пунктуация даже собрал
-               
+
                 рукопись которой необходимыми всемогущая которое свою, курсивных, ведущими рот? Имеет большой буквоград
                 о, запятой коварный снова за жаренные языкового свой своих лучше рыбными грустный!</span>
             <h2 class="title">WHERE DOES IT COME FROM?</h2>
@@ -47,7 +61,8 @@
                 Собрал ты скатился имеет запятой жаренные! Своего снова осталось встретил деревни обеспечивает его прямо
                 маленькая одна переписали несколько маленький заголовок до агентство коварный пунктуация даже собрал
                 рукопись которой необходимыми всемогущая которое свою, курсивных, ведущими рот? Имеет большой буквоград
-                о, запятой коварный снова за жаренные языкового свой своих лучше рыбными грустный!Далеко-далеко за словесными горами, в стране гласных и согласных живут рыбные тексты.
+                о, запятой коварный снова за жаренные языкового свой своих лучше рыбными грустный!Далеко-далеко за
+                словесными горами, в стране гласных и согласных живут рыбные тексты.
                 Собрал ты скатился имеет запятой жаренные! Своего снова осталось встретил деревни обеспечивает его прямо
                 маленькая одна переписали несколько маленький заголовок до агентство коварный пунктуация даже собрал
                 рукопись которой необходимыми всемогущая которое свою, курсивных, ведущими рот? Имеет большой буквоград
@@ -65,9 +80,10 @@
                 о, запятой коварный снова за жаренные языкового свой своих лучше рыбными грустный!</span>
         </div>
     </div>
-    
+
 </body>
 <a class="link" href="../table/">
     <div class="link-text">Перейти к заданию 1</div>
 </a>
+
 </html>
