--- a/menu/index.html
+++ b/menu/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../fonts/fonts.css">
     <title>Menu</title>
 </head>
 
@@ -84,6 +85,9 @@
 </body>
 <a class="link" href="../table/">
     <div class="link-text">Перейти к заданию 1</div>
+</a>
+<a class="link" href="№">
+    <div class="link-text">Перейти к заданию 3</div>
 </a>
 
 </html>
