--- a/menu/index.html
+++ b/menu/index.html
@@ -86,7 +86,7 @@
 <a class="link" href="../table/">
     <div class="link-text">Перейти к заданию 1</div>
 </a>
-<a class="link" href="№">
+<a class="link" href="../subscribe/imdex.html">
     <div class="link-text">Перейти к заданию 3</div>
 </a>
 
