--- a/subscribe/imdex.html
+++ b/subscribe/imdex.html
@@ -4,9 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Subscribe</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../fonts/fonts.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="card">
+            <h2 class="title-card">Enterprice</h2>
+            <hr  size="4px" color="red">
+            <div >
+                <p class="price">$69</p>
+                <p class="mo">per month</p>
+                <p class="row">100GB monthly bandwidth</p>
+                <p class="row">10GB disk space</p>
+                <p class="row">20 email accounts</p>
+                <p class="row">Unlimited subdomens</p>
+            </div>
+            <button class="buy red">Buy</button>
+        </div>
+        <div class="card">
+            <h2 class="title-card">Professional</h2>
+            <hr  size="4px" color="orange">
+            <div >
+                <p class="price">$29</p>
+                <p class="mo">per month</p>
+                <p class="row">5GB disk space</p>
+                <p class="row">60GB monthly bandwidth</p>
+                <p class="row">10 email accounts</p>
+                <p class="row">Unlimited subdomens</p>
+            </div>
+            <button class="buy orange">Buy</button>
+        </div>
+        <div class="card">
+            <h2 class="title-card">Standart</h2>
+            <hr  size="4px" color="blue">
+            <div >
+                <p class="price">$19</p>
+                <p class="mo">per month</p>
+                <p class="row">3GB disk space</p>
+                <p class="row">30GB monthly bandwidth</p>
+                <p class="row">5 email accounts</p>
+                <p class="row">Unlimited subdomens</p>
+            </div>
+            <button class="buy blue">Buy</button>
+        </div>
+        <div class="card">
+            <h2 class="title-card">Basik</h2>
+            <hr  size="4px" color="green">
+            <div >
+                <p class="price">$9</p>
+                <p class="mo">per month</p>
+                <p class="row">1GB disk space</p>
+                <p class="row">10GB monthly bandwidth</p>
+                <p class="row">2 email accounts</p>
+                <p class="row">Unlimited subdomens</p>
+            </div>
+            <button class="buy green">Buy</button>
+        </div>
+    </div>
 </body>
 </html>
