--- a/subscribe/imdex.html
+++ b/subscribe/imdex.html
@@ -63,5 +63,8 @@
             <button class="buy green">Buy</button>
         </div>
     </div>
+    <a class="link" href="../menu/index.html">
+        <div class="link-text">Перейти к заданию 2</div>
+    </a>
 </body>
 </html>
